- add missing test cases - add boundaries for the ismutant endpoint